# sendme-egui

./: Cargo.toml  README.md
src/: app.rs  comms.rs  main.rs  sendme.rs  sendme_mock.rs  worker.rs
src/transport/: fetch.rs  mod.rs  offer.rs  sendme.rs
