[package]
name = "sendme-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-channel = "2.5.0"
eframe = "0.32.1"
iroh = "0.91.2"
iroh-blobs = "0.93.0"
rfd = "0.15.4"
time = "0.3.41"
tokio = { version = "1.47.1", features = ["macros", "rt", "sync", "rt-multi-thread", "default", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
walkdir = "2.5.0"
