[package]
name = "sendme-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-channel = "2.5.0"
chrono = "0.4.42"
confy = "1.0.0"
directories = "6.0.0"
eframe = "0.32.1"
futures-buffered = "0.2.12"
hex = "0.4.3"
humansize = "2.1.3"
iroh = "0.91.2"
iroh-blobs = "0.93.0"
n0-future = "0.2.0"
num_cpus = "1.17.0"
rand = "0.8.5"
rfd = "0.15.4"
serde = "1.0.219"
serde_derive = "1.0.219"
time = "0.3.41"
tokio = { version = "1.47.1", features = [
    "macros",
    "rt",
    "sync",
    "rt-multi-thread",
    "default",
    "time",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
walkdir = "2.5.0"
